# etl-rs

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: pipeline_benchmark.rs
docs/: architecture.md  delta-lake-support.md  deployment.md  migration.md  performance.md  security.md  troubleshooting.md
docs/api/: README.md
docs/context/: 01-visao-geral.md  02-estrutura-projeto.md  03-dependencias.md  04-arquitetura-principal.md  05-framework-integridade.md  06-recursos-avancados.md  07-manutencao-gestao.md
examples/: example_00.rs  example_01.rs  example_02.rs  example_03.rs  example_04.rs  example_05.rs
examples/data/: sales.csv  users.csv
src/: config.rs  error.rs  events.rs  lib.rs  plugins.rs  traits.rs  types.rs
src/extract/: csv.rs  delta.rs  json.rs  mod.rs  parquet.rs  traits.rs
src/load/: common.rs  console.rs  delta.rs  json.rs  memory.rs  mod.rs  parquet.rs  traits.rs
src/pipeline/: mod.rs
src/transform/: common.rs  mod.rs  traits.rs
