[package]
name = "etlrs"
version = "0.1.0"
edition = "2021"
authors = ["silvanoneto <dev@silvanoneto.com>"]
description = "Uma biblioteca ETL moderna, segura e de alta performance construída em Rust, projetada para ambientes empresariais exigentes com foco em confiabilidade, escalabilidade e integridade de dados."
license = "Apache License 2.0"
repository = "https://github.com/silvanoneto/etl-rs"
readme = "README.md"
keywords = ["etl", "data", "pipeline", "transform", "rust"]
categories = ["database", "data-structures", "parsing"]

[dependencies]
# Core
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dados
csv = { version = "1.3", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"], optional = true }
arrow = { version = "55.2.0", optional = true }
parquet = { version = "55.2.0", optional = true }
deltalake = { version = "0.19", optional = true }

# AWS
aws-sdk-s3 = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }

# Azure
azure_storage = { version = "0.19", optional = true }

# ML
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Async
futures = "0.3"

# Utility
num_cpus = "1.16"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = ["csv", "json"]
csv = ["dep:csv"]
json = []
database = ["sqlx"]
parquet = ["dep:parquet", "arrow"]
delta = ["dep:deltalake", "arrow", "parquet"]
cloud = ["aws-sdk-s3", "aws-config", "azure_storage"]
ml = ["candle-core", "candle-nn"]
full = ["csv", "json", "database", "parquet", "delta", "cloud", "ml"]

[[bench]]
name = "pipeline_benchmark"
harness = false
